--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Its a Time Vortex!</title>
+		<title>Tardis Starfield</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>TARDIS TIME</h1>
+			<h1>Help Keep the Tardis in the Time Vortex!</h1>
 		</header>
 			<section id="content">
 				<canvas id="Starfield" data-processing-sources="Starfield.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Left click to reset, Use arrow keys to change speed
+		    Left click to reset, Use arrow keys to change speed. Use your cursur to allign the vortex
 	    </footer>
 	</body>
 </html>
