--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Left click to reset, Use arrow keys to change speed. Use your cursur to allign the vortex
+		    Left click to reset, Use arrow keys to change speed. Use your cursur to align the vortex
 	    </footer>
 	</body>
 </html>
